# diagram-pipeline

./: LICENSE  README.md
diagram/puml/: sample.puml
docs/: オートマティック_プロンプト設計.md  中間データからUML変換_プロンプト設計.md
docs/0_desing/: ChatGPT x MCP x CIのパターン.md  設計案.md
docs/0_desing/手動/: マニュアル_プロンプト設計.md  入力とダイアグラムの関係.md
model/: sample_model.json
sample_code/src/core/: usecase.py
sample_code/src/inbound/: stdin_adapter.py
src/: main.py
src/outbound/: file_adapter.py
uml-mcp/: Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
uml-mcp-openai/: Makefile  README.md  pyproject.toml  ruff.toml
uml-mcp-openai/docs/: server-config.chatgpt.json
uml-mcp-openai/docs/source/: conf.py
uml-mcp-openai/src/uml_mcp_openai/: main.py  server.py
uml-mcp/docs/source/: api.rst  index.rst
uml-mcp/src/uml_mcp/: uml_mcp_server.py  uml_parser.py  uml_to_plantuml.py
